trying to fix centering issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   background-size: cover;
   background-position: center;
   background-color: #f2f2f2;
-  width: 100vw;
+  width: 95vw;
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
@@ -20,7 +20,7 @@ body {
   background-size: cover;
   background-position: center;
   background-color: #f2f2f2;
-  width: 100vw;
+  width: 95vw;
   max-width: 600px;
   display: flex;
   flex-direction:column;
@@ -88,9 +88,9 @@ img {
 }
 
 .navbar {
-  width: 50%;
+  width: 50vw;
   display: flex;
-  /*flex-direction: row;*/
+  flex-direction: row;
   margin-left: auto;
   margin-right: auto;
   align-items: center;
@@ -120,9 +120,13 @@ img {
 
 .wrapper {
   display: flex;
+  margin-left: auto;
+  margin-right: auto;
   flex-direction: column;
-  align-items: center; /* This centers both children horizontally */
-  width: 100%;
+  align-items: center;
+  justify-content: center;
+  width: 95vw;
+  min-height: 100vh;
 }
 
 .cover {
